fixtures/positive/basic.inc
---
title = Basic data
version = 1
[columns]
score = points
---
name,score
Ada,21
Babbage,12
