fixtures/negative/invalid_key.inc
---
bad key = value
---
name,score
Ada,21
